squid:S2325  'private' methods that don't access instance data should be 'static' squid:S1148  Throwable.printStackTrace(...) should not be called findbugs:DM_NUMBER_CTOR  Performance - Method invokes inefficient Number constructor; use static valueOf instead